--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  	</script>
 </head>
 <body>
-  <p>Here is a fucking LASER CAT!</p> 
+  <p>Here is a LASER CAT!</p> 
   <img src="lasercat3.jpg" alt="Fucking Laser Cat." title="Fucking Laser Cat!">
   <p>John Ballard owns a Laser Cat.</p>
 	
