--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
 	<meta charset="utf-8">
 	<title>John Ballard</title>
-	<link rel="stylesheet" type="text/css" href="application.css">
-	<script type="text/javascript">
-      alert('Hello World!');
- 	</script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <p>Here is a fucking LASER CAT!</p> 
-  <img src="lasercat3.jpg" alt="Fucking Laser Cat." title="Fucking Laser Cat!">
-  <p>John Ballard owns a Laser Cat.</p>
-	
+   <div id="main-content">
+	  <p>Here is a <strong>LASER CAT!</p> 
+	  <img src="img/lasercat3.jpg" alt="Fucking Laser Cat." title="Fucking Laser Cat!">
+	  <p>
+	  <em>John Ballard owns a Laser Cat.</em>
+	  </p>
+  </div>
 
 
 </body>
