--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
    <div id="main-content">
-	  <p>Here is a <strong>LASER CAT!</p> 
+	 <p>Here is a <strong>LASER CAT!</p>
+	   <div>  
+	     <p> 
+	  	  <a href="#" class="btn btn-primary btn-lg active" role="button">My Life</a>
+	    </p>
+	  </div>
 	  <img src="img/lasercat3.jpg" alt="Fucking Laser Cat." title="Fucking Laser Cat!">
 	  <p>
 	  <em>John Ballard owns a Laser Cat.</em>
