--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
 <body>
    <div id="main-content">
 	 <p>Here is a <strong>LASER CAT!</p>
-	   <div>  
-	     <p> 
-	  	  <a href="#" class="btn btn-primary btn-lg active" role="button">My Life</a>
-	    </p>
-	  </div>
+	    <div>  
+	  	  <p><a href="index2.html" class="btn btn-primary btn-lg active" role="button">My Life</a></p>
+	    </div>
 	  <img src="img/lasercat3.jpg" alt="Fucking Laser Cat." title="Fucking Laser Cat!">
-	  <p>
-	  <em>John Ballard owns a Laser Cat.</em>
-	  </p>
+	<p><em>John Ballard owns a Laser Cat.</em></p>
   </div>
 </body>
 </html>
