--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <div id="main-content">
 	 <p>Here is a <strong>LASER CAT!</p>
 	    <div>  
-	  	  <p><a href="index2.html" class="btn btn-primary btn-lg active" role="button">My Life</a></p>
+	  	  <p><a href="index2.html">My Life</a></p>
 	    </div>
 	  <img src="img/lasercat3.jpg" alt="Fucking Laser Cat." title="Fucking Laser Cat!">
 	<p><em>John Ballard owns a Laser Cat.</em></p>
