--- a/index2.html
+++ b/index2.html
@@ -8,10 +8,9 @@
 <div id="main-content">
 <body>
   <div id="main-content">
-    <h2>Places I've Traveled</h2>
-    <h2>
-
-    <a href="index.html" class="btn btn-primary btn-lg active" role="button">Go Back</a>
+    <p>Full time Student at Florida State University.</p>
+    
+    <a href="index.html">Go Back</a>
   </div>
 </body>
 </html>
